# process

./: CMakeLists.txt  README.md
cmake/: vix_processConfig.cmake.in
examples/: CMakeLists.txt  capture_output.cpp  check_status.cpp  kill_process.cpp  terminate_process.cpp
include/vix/process/: Child.hpp  Command.hpp  Kill.hpp  Output.hpp  PipeMode.hpp  Process.hpp  ProcessError.hpp  ProcessId.hpp  ProcessOptions.hpp  ProcessResult.hpp  Spawn.hpp  Status.hpp  Terminate.hpp  Wait.hpp
include/vix/process/async/: OutputAsync.hpp  SpawnAsync.hpp  WaitAsync.hpp
include/vix/process/pipeline/: Pipeline.hpp  PipelineAsync.hpp
src/: Child.cpp  Command.cpp  Kill.cpp  Output.cpp  Spawn.cpp  Status.cpp  Terminate.cpp  Wait.cpp
src/async/: OutputAsync.cpp  SpawnAsync.cpp  WaitAsync.cpp
src/pipeline/: Pipeline.cpp  PipelineAsync.cpp
src/platform/: PosixProcess.cpp  PosixProcess.hpp  WindowsProcess.cpp  WindowsProcess.hpp
test/: CMakeLists.txt  process_async_tests.cpp  process_tests.cpp
